# omniscribe

./: .gitignore  CHANGELOG.md  README.md  feedback.md  pyproject.toml  start.sh  transcribe.py
samples/: entrevista-nicolas-omni-transcriber.txt
scripts/: start.sh
src/local_transcriber/: __init__.py  __main__.py  config.py  recorder.py
src/omniscribe/: __init__.py  __main__.py  config.py  diarizer.py  recorder.py  transcriber.py  tui.py
src/omniscribe/analysis/: __init__.py  analyzer.py  cli.py
src/omniscribe/diarization/: __init__.py  diarizer.py
src/omniscribe/recording/: __init__.py  alerts.py  audio.py  capture.py  cli.py  constants.py  devices.py  input_check.py  meters.py  session.py  tui_callbacks.py
src/omniscribe/transcription/: __init__.py  audio.py  buffer.py  constants.py  cuda.py  factory.py  hallucination_filter.py  live.py  transcript_metadata.py
src/omniscribe/ui/: __init__.py  tui.py
tests/: __init__.py  test_audio_utils.py  test_device_detection.py  test_transcriber_buffer.py  test_transcription_quality.py
tests/fixtures/: test_clear_speech.txt  test_split_temp.txt
