[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omniscribe"
version = "0.1.0"
description = "OmniScribe: Record meetings with system audio and microphone, with live Whisper transcription"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "User"}
]
keywords = ["audio", "recording", "transcription", "whisper", "meetings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]

dependencies = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24",
    "faster-whisper>=1.0.0",
    "scipy>=1.10",
    "rich>=13.0",
    # NVIDIA CUDA libraries for GPU support
    "nvidia-cublas-cu12>=12.1",
    "nvidia-cudnn-cu12>=8.9",
    "nvidia-cuda-runtime-cu12>=12.1",
]

[project.optional-dependencies]
transcribe = []  # Kept for backwards compatibility
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
omniscribe = "omniscribe.recorder:main"

[project.urls]
Homepage = "https://github.com/user/local-transcriber"
Repository = "https://github.com/user/local-transcriber"

[tool.hatch.build.targets.wheel]
packages = ["src/omniscribe"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/scripts",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/omniscribe"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
